--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/pages/index.css" />
+    <link rel="stylesheet" href="./css/pages/footer.css">
     <link rel="icon" href="bag-shopping-solid.svg" />
     <link
       rel="stylesheet"
@@ -14,27 +15,27 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Document</title>
+    <title>Shopping</title>
   </head>
   <body>
     <div class="top-img">
-      <header class="flex">
+      <header id="headerElement" class="flex">
         <div class="logo">
           <i class="fa-solid fa-bag-shopping"></i>
           <span style="font-weight: bold">AWU</span>
           <p style="letter-spacing: 0.5px">Shopping</p>
         </div>
         <div class="links">
-          <a style="position: relative" class="cart" href="">
+          <a style="position: relative" class="cart" href="./pages/cart.html">
             <i class="fa-solid fa-cart-shopping"></i>
             $0.00
             <span class="products-number">2</span>
           </a>
-          <a class="sign-in" href="">
+          <a class="sign-in" href="./pages/signin.html">
             <i class="fa-solid fa-right-to-bracket"></i>
             Sign in
           </a>
-          <a class="register" href="">
+          <a class="register" href="./pages/register.html">
             <i class="fa-solid fa-user-plus"></i>
             Register
           </a>
@@ -49,5 +50,136 @@
         <button>Shop Now</button>
       </section>
     </div>
+
+    <main>
+      <h1 class="recommended"><i class="fa-solid fa-check"></i> Recommended for you</h1>
+
+      <section class="products flex">
+        <article class="card">
+          <a href="/pages/product-details.html ">
+            <img width="266px" src="images/1.png" alt="" />
+          </a>
+          <div style="width: 266px" class="content">
+            <h1 class="title">Product Title</h1>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+              itaque?
+            </p>
+            <div class="price">$100</div>
+            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i> Add To Cart</button>
+          </div>
+        </article>
+        <article class="card">
+          <a href="/pages/product-details.html ">
+            <img width="266px" src="images/2.webp" alt="" />
+          </a>
+          <div style="width: 266px" class="content">
+            <h1 class="title">Product Title</h1>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+              itaque?
+            </p>
+            <div class="price">$100</div>
+            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i> Add To Cart</button>
+          </div>
+        </article>
+        <article class="card">
+          <a href="/pages/product-details.html ">
+            <img width="266px" src="images/3.webp" alt="" />
+          </a>
+          <div style="width: 266px" class="content">
+            <h1 class="title">Product Title</h1>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+              itaque?
+            </p>
+            <div class="price">$100</div>
+            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i> Add To Cart</button>
+          </div>
+        </article>
+        <article class="card">
+          <a href="/pages/product-details.html ">
+            <img width="266px" src="images/4.webp" alt="" />
+          </a>
+          <div style="width: 266px" class="content">
+            <h1 class="title">Product Title</h1>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+              itaque?
+            </p>
+            <div class="price">$100</div>
+            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i> Add To Cart</button>
+          </div>
+        </article>
+        <article class="card">
+          <a href="/pages/product-details.html ">
+            <img width="266px" src="images/5.webp" alt="" />
+          </a>
+          <div style="width: 266px" class="content">
+            <h1 class="title">Product Title</h1>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+              itaque?
+            </p>
+
+            <div class="price">$100</div>
+            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i> Add To Cart</button>
+          </div>
+        </article>
+        <article class="card">
+          <a href="/pages/product-details.html ">
+            <img width="266px" src="images/6.webp" alt="" />
+          </a>
+          <div style="width: 266px" class="content">
+            <h1 class="title">Product Title</h1>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+              itaque?
+            </p>
+            <div class="price">$100</div>
+            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i> Add To Cart</button>
+          </div>
+        </article>
+        <article class="card">
+          <a href="/pages/product-details.html ">
+            <img width="266px" src="images/7.webp" alt="" />
+          </a>
+          <div style="width: 266px" class="content">
+            <h1 class="title">Product Title</h1>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+              itaque?
+            </p>
+            <div class="price">$100</div>
+            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i> Add To Cart</button>
+          </div>
+        </article>
+        <article class="card">
+          <a href="/pages/product-details.html ">
+            <img
+              width="266px"
+              src="images/8.png"
+              alt=""
+            />
+          </a>
+          <div style="width: 266px" class="content">
+            <h1 class="title">Product Title</h1>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+              itaque?
+            </p>
+            <div class="price">$100</div>
+            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i> Add To Cart</button>
+          </div>
+        </article>
+      </section>
+    </main>
+    
+    <footer>
+      Designed and developed by <span>Islem Briki</span> © 2025
+    </footer>
+    <script src="/js/main.js"></script>
   </body>
+  
 </html>
+
